--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <style>
     body {
         background-image: url('backgroundHomeImage.jpg');
-        background-size: cover;
+        background-size: auto;
         background-position: center;
         background-repeat: no-repeat;
+        background-attachment: fixed;
     }
 </style>
 </head>
-<body>
+<body style="background-position: -50em;">
   <header>
     <h1>Pedro Bittencourt</h1>
     <h2>Programador</h2>
@@ -23,7 +24,7 @@
     <section id="about">
       <h2>Sobre mim</h2>
       <p>
-        Sou um programador experiente com mais de 3 anos de experiência.<br> Sou especialista em software.<br> Tenho um forte senso de ética e compromisso com a qualidade.
+        Sou do Rio grande do sul, Viamão.<br> Programador experiente com mais de 3 anos de experiência.<br> Sou especialista em software.<br> Tenho um forte senso de ética e compromisso com a qualidade.
       </p>
       <p>
         Meus objetivos profissionais são evoluir profissionalmente e contribuir com a empressa.
@@ -34,7 +35,7 @@
       <h2>Habilidades</h2>
       <ul>
         <li>Linguagens de programação: C#, Python, Lua, javascript</li>
-        <li>Frameworks: .NET, django, unity</li>
+        <li>Frameworks: .NET, django, unity, node.js</li>
         <li>Bancos de dados: SQL</li>
         <li>Outras habilidades: Inglês intermediário</li>
       </ul>
