--- a/index.html
+++ b/index.html
@@ -5,45 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pedro Bittencourt</title>
   <link rel="stylesheet" href="index.css">
-  <style>
-    body {
-        background-image: url('backgroundHomeImage.jpg');
-        background-size: auto;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-    }
-</style>
 </head>
 <body style="background-position: -50em;">
   <header>
-    <h1>Pedro Bittencourt</h1>
-    <h2>Programador</h2>
+    <h1 class="barheader">
+      <img class="mySelfImage" src="mySelf.png" alt="Pedro" width="150" height="160"> 
+      <span class="centered-text">Pedro Bittencourt<br>
+        <span style="font-size: 15px; color: rgb(6, 214, 214);">Desenvolvedor de Software</span>
+      </span>
+      <span class="centered-text" style="transform: translate(-20%,-50%); color: white; font-size: 75px;">
+        Portifólio
+      </span>
+    </h1>
   </header>
-  <main>
+  <main style="margin: 4%;">
     <section id="about">
       <h2>Sobre mim</h2>
       <p>
-        Sou do Rio grande do sul, Viamão.<br> Programador experiente com mais de 3 anos de experiência.<br> Sou especialista em software.<br> Tenho um forte senso de ética e compromisso com a qualidade.
-      </p>
-      <p>
-        Meus objetivos profissionais são evoluir profissionalmente e contribuir com a empressa.
+        Sou do Rio Grande Do Sul, Viamão.<br>
+        Programador experiente com mais de 3 anos de experiência.<br>
+        Sou especialista em software.<br>
       </p>
     </section>
-    <div class="separator"> </div>
+    <div class="separator"></div>
     <section id="skills">
       <h2>Habilidades</h2>
       <ul>
-        <li>Linguagens de programação: C#, Python, Lua, javascript</li>
-        <li>Frameworks: .NET, django, unity, node.js</li>
+        <li>Linguagens: C#, Python, Lua, JavaScript, Kotlin</li>
+        <li>Frameworks: .NET, unity, node.js</li>
         <li>Bancos de dados: SQL</li>
-        <li>Outras habilidades: Inglês intermediário</li>
+        <li>Outras habilidades: Inglês básico</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Experiências</h2>
+      <ul>
+        <li>Criação de jogos em Java</li>
+        <li>Analise de sistemas com C#</li>
+        <li>Criação de sites com JavaScript</li>
+        <li>Criação de extensos Dll com C++</li>
+        <li>Aprendizado de maquina com .NET</li>
+        <li>Criação de Apps utilizando Kotlin</li>
+        <li>Criação jogos com Unity</li>
+        <li>Ministrar aulas de programação</li>
       </ul>
     </section>
   </main>
   <div class="separator"> </div>
   <footer>
     <p>Copyright &copy; Pedro Bittencourt 2024</p>
+    <p>Email: <a href="mailto:pedro-6567192@educar.rs.gov.com.br" style="text-decoration: none; color: inherit;">pedro-6567192@educar.rs.gov.com.br</a></p>
   </footer>
 </body>
 </html>
