--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <span style="font-size: 15px; color: rgb(6, 214, 214);">Desenvolvedor de Software</span>
       </span>
       <span class="centered-text" style="transform: translate(-20%,-50%); color: white; font-size: 75px;">
-        Portifólio
+        Portfólio
       </span>
     </h1>
   </header>
